--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div id="social_list">
         <a href="https://www.linkedin.com/in/vijayabalaji-j-4b8a731b1" target="_blank">Linkedin</a>
         <a href="https://github.com/vijayabalaji-dev/" target="_blank">Github</a>
-        <a href="./assests/resume_vj.pdf" target="_blank">Resume</a>
+        <a href="./assests/Profile.pdf" target="_blank">Resume</a>
       </div>
     </section>
     <section class="section_page">
